Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,6 +1,7 @@
 #labels Featured
 If you have any usage question, please email "yanghoch at usc.edu".
 
+== Compile ==  
 http://code.google.com/p/perm/wiki/Compile
 
 == SYNOPSIS ==  
