--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,8 +1,9 @@
 #labels Featured
 If you have any usage question, please email "yanghoch at usc.edu".
 
-== Compile ==  
+== CONTENTS ==  
 http://code.google.com/p/perm/wiki/Compile
+http://code.google.com/p/perm/wiki/Output
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
