Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,9 +1,9 @@
 #labels Featured
 If you have any usage question, please email "yanghoch at usc.edu".
 
-== CONTENTS ==  
-=== Compile === http://code.google.com/p/perm/wiki/Compile
-=== Output === http://code.google.com/p/perm/wiki/Output
+= CONTENTS ==  
+== Compile == http://code.google.com/p/perm/wiki/Compile
+== Output == http://code.google.com/p/perm/wiki/Output
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
