--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -2,10 +2,8 @@
 If you have any usage question, please email "yanghoch at usc.edu".
 
 == CONTENTS ==  
-=== Compile === 
-http://code.google.com/p/perm/wiki/Compile
-=== Output ===  
-http://code.google.com/p/perm/wiki/Output
+[http://code.google.com/p/perm/wiki/Compile Compile]
+[http://code.google.com/p/perm/wiki/Output Output]
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
