--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -3,10 +3,11 @@ If you have any usage question, please email "yanghoch at usc.edu".
 
 == CONTENTS ==  
 === [http://code.google.com/p/perm/wiki/Compile Compile] ===
-=== [http://code.google.com/p/perm/wiki/Output Output]===
+=== [http://code.google.com/p/perm/wiki/Output Output Format]===
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
+
 For single end read: {{{PerM <Ref> <Reads> [options]}}}
  * {{{./PerM Ref.fasta SingleEndReads.fasta -v 5 }}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}}
