Edited wiki page through web user interface.

--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -6,4 +6,4 @@ Download and unzip the source code. (Type unzip ./PerM_0.1.9_GCC.zip in linux) i
 
 For windows user, it is easy to add the source code to eclipse or visual studio c++ project and compile. For VC++ 2008, (I only tried free express version), it is normal to have many security warning. 
 
-http://code.google.com/p/perm/wiki/Usage
+[http://code.google.com/p/perm/wiki/Usage Back to usage]
