--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -4,6 +4,6 @@ Please email "yanghoch at usc.edu", if you encounter any problems or have any su
 
 Download and unzip the source code. (Type unzip ./PerM_0.1.9_GCC.zip in linux) in the directory with the download. For Linux and gcc user, type make in the unzip directory to generate the execute file PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type gcc -v to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. 
 
-For windows user, it is easy to add the source code to eclipse or visual studio c++ project and compile. For VC++ 2008, (I only tried free express version), it is normal to have many security warning. 
+For windows user, it is easy to add the source code to Eclipse or visual studio c++ project and compile. For VC++ 2008, (I only tried free express version), it is normal to have many security warning. 
 
 [http://code.google.com/p/perm/wiki/Usage Back to usage]
