Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -20,7 +20,7 @@ For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
 == Command Line Options ==  
 The following are the short description for each arguments:
  # The reference file should be in fasta format with the corresponding ext name ex: .fasta, .fna. or .fa. For transcriptom with multiple genes or isoforms as reference, concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file, so PerM knows it is a file listing the path of multiple fasta file.  
- # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *--format <format>*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
+ # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--format <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * *-A*     Output all alignments within the mismatch threshold.
