Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -9,11 +9,13 @@ If you have any usage question, please email "yanghoch at usc.edu".
 To use the command line, type PerM with the args in the order.
 
 For single end read: {{{PerM <Ref> <Reads> [options]}}}
- * {{{./PerM Ref.fasta SingleEndReads.fasta -v 5 }}}
+Example:
+ * {{{./PerM Ref.fasta Reads.fasta -v 5 }}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}}
- * {{{./PerM Ref.fasta SingleEndReads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}}
+ * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}}
  * {{{./PerM my.index SingleEndReads.csfasta -v 5}}} 
 For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
+Example:
  * {{{./PerM ref.fa -1 F3.fa -2 R3.fa -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
  * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
