--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -3,7 +3,8 @@ If you have any usage question, please email "yanghoch at usc.edu".
 
 == CONTENTS ==  
 === [http://code.google.com/p/perm/wiki/Compile Compile] ===
-=== [http://code.google.com/p/perm/wiki/Output Output Format]===
+=== [http://code.google.com/p/perm/wiki/Input Input Files]===
+=== [http://code.google.com/p/perm/wiki/Output Output Files]===
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
