--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -8,9 +8,9 @@ PerM takes single or multiple fasta files as the reference. The file should have
 ...
 /data/chrY.fa
 }}}
-PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", which is typically gene transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed with the alignments result output. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N". Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name couldn't be too long to be saved. 
+PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", which is typically gene transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed in the alignments result output. 
 
-
+Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N". Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name couldn't be too long to be saved. 
 
 ==Read Files==
 PerM expects reads from either the SOLiD or Solexa sequencer. PerM guesses the read file format according to the first read file's ext name, ex: ".fasta", ".fastq", ".csfasta", ".csfastq" ... etc. User can also use arg "--flag <readFormat> to specify the reads files format. Reads file format and the read lengths are assumed to be equal to the first read in the first data file. 
