--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -5,6 +5,8 @@ If you have any usage question, please email "yanghoch at usc.edu".
 === [http://code.google.com/p/perm/wiki/Compile Compile] ===
 === [http://code.google.com/p/perm/wiki/Input Input Files]===
 === [http://code.google.com/p/perm/wiki/Output Output Files]===
+=== [http://code.google.com/p/perm/wiki/QAin2008USC_MCB_Retreat Q & A ] ===
+=== [http://code.google.com/p/perm/wiki/QAin2008USC_MCB_Retreat Comparison ] ===
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
