--- a/wiki/Limitation.wiki
+++ b/wiki/Limitation.wiki
@@ -1,14 +1,10 @@
-#summary One-sentence summary of this page.
 #labels Featured
+= Limitation =
+PerM doesn't support reads shorter than 25 base pairs. 
+PerM doesn't support SOLiD reads with more than 64 base pair.
+PerM doesn't support single-end Illumina reads with more than 128 base pair.
+PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end.
+We suggest users to set the truncated read length less than 64, using -T 64 to mapped long reads with their first 64 bases. 
+A single reference sequence should be larger than the read length. We experience segmentation fault when trying map long reads to exons that is shorter than the read length. 
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Currently, PerM will discard any reads with 'N'. Similarly, no reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
