--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -7,7 +7,7 @@ If you have any usage question, please email "yanghoch at usc.edu".
 === [http://code.google.com/p/perm/wiki/Output Output Files]===
 === [http://code.google.com/p/perm/wiki/QAin2008USC_MCB_Retreat Q & A ] ===
 === [http://code.google.com/p/perm/wiki/ProgramComparisons Comparison ] ===
-
+=== [http://code.google.com/p/perm/wiki/Limitation Limitation and Future work] ===
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
 
