--- a/wiki/Limitation.wiki
+++ b/wiki/Limitation.wiki
@@ -8,3 +8,5 @@ We suggest users to set the truncated read length less than 64, using -T 64 to m
   * A single reference sequence should be larger than the read length. 
   * PerM will discard any reads with 'N'. 
   * No reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
+
+[http://code.google.com/p/perm/wiki/Usage Back to usage]
