--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -17,6 +17,16 @@ PerM expects reads from either the SOLiD or Solexa sequencer. PerM guesses the r
 
 For SOLiD reads in csfasta format, PerM will try to read the file with the same base name as the read set, however with the ext name ".qual" for quality score. That is, if the read file name is 7B.csfasta, its quality file "7B.qual" should be put beside.
 If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
-
 (Tips! Use our shell splitReads.sh to split fasta or csfasta file into one million reads per set. It will generate a list file. Use the list file name as the input ptr of PerM.)
+
+== Paired-end reads ==
+PerM takes two format of the paired end reads. 
+(1) Concatenated 5'-3' end 3'-5' fasta file. 
+(2) Two separated file of with _F3 and _R3. Each corresponding line is paired.
+For input format (1), each file name should be listed in a row as single-end read file. 
+For input format (2), the two paired files can be specified in a list, with each row having two files path, separated by tab. Ex: reads_F3.csfasta \t reads_R3.csfasta. 
+Or, specified with the command line for a paired read files:
+
+{{{./PerM <reference or index path> -1 <forward reads path> -2 <reverse reads path> [-flag options] }}}
+
 [http://code.google.com/p/perm/wiki/Usage Back to usage] 
