--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -14,8 +14,8 @@ PerM also takes fasta with multiple sequences separated by a line start with "> 
 Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N". 
 
 ==== Index file ====
-PerM can saved the preprocessed reference into binary index file, with 
-{{{arg -m -s /PATH.index }}}. The default index file name is a used
+PerM can saved the preprocessed reference into binary index file, by specify the argument.
+{{{ -m -s /PATH.index }}}. The default index file name is a used
 
 Limited by OS the system, the index file name couldn't be too long to be saved. 
 
