--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -1,4 +1,4 @@
-#labels Featured
+#labels Phase-Deploy
 PerM has been compiled in Redhat (32, 64 bits) and Windows XP (32 bit), Windows 7 (64bit), with gcc 3.0, gcc 4.3 and Visual C++. Try the compiled executable in the download section. 
 Please email "yanghoch at usc.edu", if you encounter any problems or have any suggestion.
 
