--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -54,22 +54,24 @@ PerM will output the mappings file to out.sam in the sam format.
 ====Include or Exclude Ambiguous Mapping====
 The default setting will print the best alignments for each read in term of mismatches number. Use "-E" to exclude the reads has multiple "best" alignments. Use "-A" flag if all alignments within substitution threshold are meant to be printed. A maximum 100 mapping per read will be print consecutively in the output file. 
 
-= Paralleled Mapping =
+== Paralleled Mapping ==
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each of them a read set. If a read set is done, the next read set in the list will be processed automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
 
-= Mate-paired Reads =
+== Mate-paired Reads ==
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed. Note this makes the running time become very slow, if both ends are in the repetitive regions. 
 
 
 (4)  Options for mate-paired reads:
--e     Exclude ambiguous paired. 
--L I   mate-paired separate lower bound
--U I   mate-paired separate upper bound, 
--o P   where P is the path (single paired read set) or the directory (multiple paired read sets)
+ * *-e *    Exclude ambiguous paired. 
+ * *-L I*   mate-paired separate lower bound
+ * *-U I*   mate-paired separate upper bound, 
+ * *-o P*   where P is the path (single paired read set) or the directory (multiple paired read sets)
 The default is set as -L 0 -U 3000
-The upper bound and lower bound can be negative, which may catch the re-arangement variations.
-Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -m -s -o out.sam.
+The upper bound and lower bound can be negative, which may catch the re-arrangement variations.
+
+{{{Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -m -s -o out.sam.}}}
+
 PerM will report only the non-ambiguous mate pair in the range of [200bp, 500bp]
 PerM will reconstruct and save the indexes to the default path for future mappings.
 PerM will output the mappings file to out.sam in the sam format.
