--- a/wiki/Limitation.wiki
+++ b/wiki/Limitation.wiki
@@ -4,6 +4,7 @@
   * PerM doesn't support single-end Illumina reads with more than 128 base pair.
   * PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end.
 We suggest users to set the truncated read length less than 64, using -T 64 to mapped long reads with their first 64 bases. 
+  * A maximum 200 mapping per read (end) will be print consecutively in the output file. 
   * The reference can't be more than 4 GB.
   * A single reference sequence should be larger than the read length. 
   * PerM will discard any reads with 'N'. 
