--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -25,12 +25,12 @@ For example:
  * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
 == Command Line Options ==  
-The following are the short description for each arguments:
+==== Required Arguments ====
  # The reference file should be in fasta format with the corresponding ext name ex: .fasta, .fna. or .fa. For transcriptom with multiple genes or isoforms as reference, concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file, so PerM knows it is a file listing the path of multiple fasta file.  
  # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--format <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
- # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
- * *-A*     Output all alignments within the mismatch threshold.
+ ==== Options ====
+ * *-A*     Output all alignments within the mismatch threshold, end-to-end.
  * *-B*     Output best alignments in terms of mismatches in the threshold.(Default) 
  * *-E*     Output only the unique mapped reads. 
  * *-m*     Create the reference index, without reusing the saved index.
@@ -51,7 +51,7 @@ PerM will report only the uniquely mapped reads within 5 mismatches in the first
 PerM will reconstruct and save the indexes to the default path for future mappings.
 PerM will output the mappings file to out.sam in the sam format.
 
-== Options for mate-paired reads ==
+==== Options for mate-paired reads ==== 
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
 
  * *-e *    Exclude ambiguous paired. 
@@ -74,10 +74,7 @@ The default is set as lower bound 0 bp and upper bound 3000 bp. The upper bound 
   * Output files in `*`.mapping format.
   * Try to read the saved index in default name, before building the new one.
   * Won't save the index in file, unless {{{- s }}} is specified. 
-  
-  
-  
-
+ 
 == Paralleled Mapping ==
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each of them a read set. If a read set is done, the next read set in the list will be processed automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
