--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -36,8 +36,7 @@ For example:
  * *-m*     Create the reference index, without reusing the saved index.
  * *-s P*     Save the reference index to accelerate the mapping in the future. If path P is not specify, the default path will be used. 
  * *-v I*  where I i the number of mismatches allowed in one end.
- * *-T I*, where I is tbe length to truncate read length, say 30 means use only first 30 
-bases (signals). Don't put the number if the full read is meant to be used.
+ * *-T I*, where I is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
  * *-o P*, where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. 
  * *-d P*, where P is the the output dir for multip read set
  * *-u P*, Print the fasta(fastq) file of those unmapped reads to a file
