--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -28,7 +28,7 @@ For example:
 ==== Required Arguments ====
  # The reference file should be in fasta format with the corresponding ext name ex: .fasta, .fna. or .fa. For transcriptom with multiple genes or isoforms as reference, concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file, so PerM knows it is a file listing the path of multiple fasta file.  
  # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--format <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
- # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
+ # Mismatch threshold could be a integer 2 to 5. For reads over 64 bp, PerM allows double the number of mismatches than the given threshold.
 ==== Options ====
  * *-A*     Output all alignments within the mismatch threshold, end-to-end.
  * *-B*     Output best alignments in terms of mismatches in the threshold.(Default) 
